[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/MetalMania-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Icons/ShellIcon.png" type="Texture" id=3]
[ext_resource path="res://UI/PauseDisplay.gd" type="Script" id=4]
[ext_resource path="res://UI/UI.gd" type="Script" id=5]
[ext_resource path="res://Assets/Icons/HeartIcon.png" type="Texture" id=6]
[ext_resource path="res://UI/SettingsDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/CreditsDisplay.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("BlackBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("BlackBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.5
margin_top = 20.0
margin_right = 108.5
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "RGB Pigs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -156.0
margin_right = 192.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Get ready..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeGameOver = SubResource( 3 )
anims/FadeIntro = SubResource( 4 )

[node name="MenuButtons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 428.0
margin_top = 324.0
margin_right = 556.0
margin_bottom = 391.0
theme = ExtResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 428.0
margin_top = 404.0
margin_right = 556.0
margin_bottom = 471.0
theme = ExtResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 428.0
margin_top = 484.0
margin_right = 556.0
margin_bottom = 551.0
theme = ExtResource( 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameDisplays" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreCounter" type="Label" parent="InGameDisplays"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 196.0
margin_top = 16.0
margin_right = 580.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 5 )
text = "Demon Pigs Slain: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InsanityLevel" type="Label" parent="InGameDisplays"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 612.0
margin_top = 16.0
margin_right = 996.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 5 )
text = "Insanity Level: 20%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shells" type="Control" parent="InGameDisplays"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 840.0
margin_right = 984.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S1" type="Sprite" parent="InGameDisplays/Shells"]
position = Vector2( 40, 32 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="S2" type="Sprite" parent="InGameDisplays/Shells"]
position = Vector2( 104, 32 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="Hearts" type="Control" parent="InGameDisplays"]
margin_right = 208.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H1" type="Sprite" parent="InGameDisplays/Hearts"]
position = Vector2( 40, 40 )
scale = Vector2( 6, 6 )
texture = ExtResource( 6 )

[node name="H2" type="Sprite" parent="InGameDisplays/Hearts"]
position = Vector2( 104, 40 )
scale = Vector2( 6, 6 )
texture = ExtResource( 6 )

[node name="H3" type="Sprite" parent="InGameDisplays/Hearts"]
position = Vector2( 168, 40 )
scale = Vector2( 6, 6 )
texture = ExtResource( 6 )

[node name="CreditsDisplay" parent="." instance=ExtResource( 8 )]
visible = false

[node name="PauseDisplay" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="PauseDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.5
margin_top = -20.5
margin_right = 39.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 7 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseDisplay"]
margin_left = -492.0
margin_top = -280.0
margin_right = 532.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 0.313726 )

[node name="SettingsDisplay" parent="." instance=ExtResource( 7 )]
visible = false
